<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="true"
    tools:context=".Info_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/browser_actions_context_menu_max_width"
        android:id="@+id/botones_catastrofe"
        tools:ignore="RtlSymmetry">

        <Button
            android:id="@+id/button_calor_extremo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_calor_extremo"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_granizo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_calor_extremo"
            android:text="@string/text_granizo"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_tormenta_invernal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_granizo"
            android:text="@string/text_tormenta_invernal"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_tornado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_tormenta_invernal"
            android:text="@string/text_tornado"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_inundacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_tornado"
            android:text="@string/text_inundacion"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_incendio_forestal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_inundacion"
            android:text="@string/text_incendio_forestal"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_terremoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_incendio_forestal"
            android:text="@string/text_terremoto"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_tsunami"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_terremoto"
            android:text="@string/text_tsunami"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_avalancha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_tsunami"
            android:text="@string/text_avalancha"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_lluvia_acida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_avalancha"
            android:text="@string/text_lluvia_acida"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_erupcion_volcanica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_lluvia_acida"
            android:text="@string/text_erupcion_volcanica"
            android:padding="10dp"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_gota_fria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_erupcion_volcanica"
            android:text="@string/text_gota_fria"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/button_tormenta_electrica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/button_gota_fria"
            android:text="@string/text_tormenta_electrica"
            android:backgroundTint="#FF9800"/>

    </LinearLayout>

</ScrollView>