<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/navigation_call"
        android:icon="@drawable/ic_baseline_call_24"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_baseline_info_24"
        tools:ignore="MenuTitle" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        tools:ignore="MenuTitle" />

</menu>