<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/perfil_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ajutes_boton_perfil"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/idioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/perfil_usuario"
            android:text="@string/ajustes_boton_idioma"
            android:backgroundTint="#FF9800"/>

        <Button
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_below="@id/idioma"
            android:text="@string/ajustes_boton_admin"
            android:backgroundTint="#FF9800"/>

    </RelativeLayout>

</FrameLayout>