...
    <string name="title_call">S.O.S.</string>
    <string name="title_info">Consejos</string>
    <string name="title_settings">Ajustes</string>
    <string name="title_dashboard">Panel de control</string>
    <string name="title_notifications">Notificaciones</string>

    <string name="text_calor_extremo">Calor extremo</string>
    <string name="text_granizo">Granizo</string>
    <string name="text_tormenta_invernal">Tormenta invernal</string>
    <string name="text_tornado">Tornado</string>
    <string name="text_inundacion">Inundación</string>
    <string name="text_incendio_forestal">Incendio forestal</string>
    <string name="text_terremoto">Terremoto</string>
    <string name="text_tsunami">Tsunami</string>
    <string name="text_avalancha">Avalancha</string>
    <string name="text_lluvia_acida">Lluvia ácida</string>
    <string name="text_erupcion_volcanica">Erupción volcánica</string>
    <string name="text_gota_fria">Gota fría</string>
    <string name="text_tormenta_electrica">Tormenta eléctrica</string>
    <string name="hintobjeto"><i>Busca "nutria" o "Test"</i></string>

    <string name="map_ubicacion_usuario">Ubicación del usuario</string>
    <string name="map_ubicacion_actual">UBICACIÓN ACTUAL</string>
    <string name="map_refugio">Refugio</string>
    <string name="map_objeto">Objeto</string>
...
